@@ -194,6 +194,7 @@ Version 1.5
  - Add Zipato Bulb 2 (Nechry)
  - Add Zipato rebranded devices from Heiman (Nechry)
  - Add Domux rebranded devices from Heiman (Nechry)
+ - Issue #1265 New Device: Linear Mains Siren from Ittiz (Nechry)
  
 Version 1.4
  - Released 10th Jan, 2016
